# TheDarkSacristan

./: main.py  pyproject.toml  settings.py
assets/: Czarny_Zakrystianin_Scenariusz.docx  ~$arny_Zakrystianin_Scenariusz.docx
assets/Pixil/: player_down_2.pixil  player_down_3.pixil  player_left_2.pixil  player_right_0.pixil  player_right_4.pixil  player_up_1.pixil
other/Pixil/: player_down_1.pixil  player_left_0.pixil  player_left_1.pixil  player_left_3.pixil  player_left_4.pixil  player_right_1.pixil  player_right_2.pixil  player_right_3.pixil  player_up_0.pixil  player_up_3.pixil
